# Task-Management

./: .env.example  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 452f683dca88_create_initial.py
app/: app.py  auth_utils.py  crud.py  database.py  deps.py  models.py  schemas.py
design/: README.md
